@@ -9,6 +9,4 @@ or just use igraph package to plot a relationship plot
 
 Export codings to html.
 
-improve UpdateWidget to scroll to position.
-
 sort the f-cat and c-cat in the widget.
